--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <canvas id="canvas"></canvas>
+        <button id="button">NEXT</button>
     </div>
+    
     <script src="simpleheat.js"></script>
     <script src="data.js"></script>
     <script src="script.js"></script>
