--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="container">
+        <h1>Hello</h1>
         <canvas id="canvas"></canvas>
+
         <button id="button">NEXT</button>
     </div>
-    
+
     <script src="simpleheat.js"></script>
     <script src="data.js"></script>
     <script src="script.js"></script>
