--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
+        <!-- Heatmap Canvas -->
         <canvas id="canvas"></canvas>
+
+        <!-- Content Layer -->
         <div class="content">
             <h1>Interactive Heatmap</h1>
             <h2>WOW</h2>
