--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
      
         <div class="content">
-
+            <p>characterized by or holding false beliefs or judgments about external reality that are held despite incontrovertible evidence to the contrary, typically as a symptom of a mental condition.</p>
     
 
         </div>
