--- a/matter.html
+++ b/matter.html
@@ -12,7 +12,7 @@
     <h1>hello</h1>
 
     <div id="viewport">
-      
+      <a href="luck.html"> lets go here</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <script src="scriptm.js"></script>
