--- a/luck.html
+++ b/luck.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Click and Win</title>
-  <link rel="stylesheet" href="css/stylel.css">
+  <link rel="stylesheet" href="stylel.css">
 </head>
 <body>
  
@@ -29,6 +29,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
-  <script src="js/scriptl.js"></script>
+  <script src="scriptl.js"></script>
 </body>
 </html>
