--- a/matter.html
+++ b/matter.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="top">
-    <h1>THIS MIGHT BE FIXED</h1>
+    <h1>the aesthetics of delusion</h1>
 </div>
     <div id="viewport">
  
