--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 collective illusions. While classical delusions might isolate an individual, modern delusions, let’s call them 
                 their evolved form, bind us together, creating alternate realities we can inhabit, sometimes even multiple at 
                 once. This isn’t entirely new. If I indulge my inner philosopher, imagine a cigarette and a 
-                faint air of pretension, I’d name-drop Baudrillard and the concept of Post-Truth. 
+                faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth. 
                 The Cambridge Dictionary (yes, again) defines Post-Truth as “the state where arguments grounded 
                 in emotions and beliefs are more persuasive than those based on facts”. But rather than delve 
                 into Simulacra and Simulation here (you’re welcome), I’ll just hyperlink it. We’re on the internet, 
