--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Heatmap with Text</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="matter.html">WONKY</a>
@@ -14,15 +17,17 @@
 
      
         <div class="content">
-            <p>If someone told me that the richest man on Earth (and possibly Mars in the near future of course) stood on 
+            <p>
+                If someone told me that the richest man on Earth (and possibly Mars in the near future of course) stood on 
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
                 Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, a testament to the times 
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
                 The crowd keeps cheering. There are no shocked faces, no collective gasp, no scandalized silence. 
                 Just applause.
-                And more confounding still? The aftermath. The consensus among those whose political beliefs align with 
+                <br>
+                And more shocking still? The aftermath. The consensus among those whose political beliefs align with 
                 the president and this hypothetical richest man is, of course, 
-                that it wasn’t a Sieg Heil. Obviously, it was a Roman salute. How could we be so naive? How foolish to see 
+                that it wasn’t a <em>Sieg Heil</em>. Obviously, it was a <em>Roman Salute</em>. How could we be so naive? How foolish to see 
                 reality as it appears when we could reframe it to suit our preferences instead.
                 To set the stage (yes, I’m about to quote a dictionary, bear with me), the Cambridge Dictionary defines 
                 delusional as “believing things that are not true.” Delusions are a kind of mental gymnastics we perform 
