--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <a href="matter.html">WONKY</a>
-
+<header></header>
     <div class="container">
         <canvas id="canvas"></canvas>
 
      
         <div class="content">
             <p>
-                If someone told me that the richest man on Earth (and possibly Mars in the near future of course) stood on 
+                If someone told me that the richest man on Earth (and possibly Mars in the near future lol) stood on 
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
                 Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, a testament to the times 
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
@@ -43,12 +43,12 @@
                 What’s worth noting is the way delusion has entered our everyday language. 
                 Enter Delulu, its cute, abbreviated sibling. By softening its edges, we’ve made delusion 
                 almost aspirational. Call someone delulu today, and they likely won’t take offense. Why would they?
-                 Delulu is safe, Delulu is comforting, and most importantly Delulu is coping. It’s no longer something to avoid but something 
-                 to embrace. After all they say Delulu is the Solulu. 
+                Delulu is safe, Delulu is comforting, and most importantly Delulu is coping. It’s no longer something to avoid but something 
+                to embrace. After all they say Delulu is the Solulu. 
                 So how have we arrived here? How did we find ourselves in this disoriented, fragmented state, 
                 where the solution to competing collective delusions seems to be doubling down to the point of
                 embracing full-blown hedonism? Perhaps we could call it giga deluluism. Or is it just giga 
-                 cognitive dissonance? 
+                cognitive dissonance? 
                 
 
             </p>
