--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <a href="matter.html">WONKY</a>
-<header></header>
+<header> 
+    <img class="headers" src="deluluemoji.png">
+    <p class="headers">delusional salvation</p>
+    <p class="headers"> a half assed essay by kimberly duck</p>
+
+</header>
     <div class="container">
         <canvas id="canvas"></canvas>
 
@@ -24,7 +29,7 @@
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
                 The crowd keeps cheering. There are no shocked faces, no collective gasp, no scandalized silence. 
                 Just applause.
-                <br>
+                <br><br>
                 And more shocking still? The aftermath. The consensus among those whose political beliefs align with 
                 the president and this hypothetical richest man is, of course, 
                 that it wasn’t a <em>Sieg Heil</em>. Obviously, it was a <em>Roman Salute</em>. How could we be so naive? How foolish to see 
@@ -34,7 +39,7 @@
                 to maintain beliefs that might not hold up to scrutiny. As a society, we’ve mastered the art of sustaining 
                 collective illusions. While classical delusions might isolate an individual, modern delusions, let’s call them 
                 their evolved form, bind us together, creating alternate realities we can inhabit, sometimes even multiple at 
-                once. This isn’t entirely new. If I indulge my inner philosopher, imagine a cigarette and a 
+                once. This isn’t entirely new. <br><br>If I indulge my inner philosopher, imagine a cigarette and a 
                 faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth. 
                 The Cambridge Dictionary (yes, again) defines Post-Truth as “the state where arguments grounded 
                 in emotions and beliefs are more persuasive than those based on facts”. But rather than delve 
