--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <a href="matter.html">WONKY</a>
 <header> 
-    <img class="headers" src="deluluemoji.png">
+    <img id="rotate" class="headers" src="deluluemoji.png">
     <p class="headers">delusional salvation</p>
-    <p class="headers"> a half assed essay by kimberly duck</p>
+    <p class="headers"> a half assed essay <br>by kimberly duck</p>
 
 </header>
     <div class="container">
