--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 into Simulacra and Simulation here (you’re welcome), I’ll just hyperlink it. We’re on the internet, 
                 after all. you know where to click.<br><br>
                 What’s worth noting is the way delusion has entered our everyday language. 
-                Enter <span>Delulu</span>, its cute, abbreviated sibling. By softening its edges, we’ve made delusion 
+               <span>Delulu</span>, Delusionals cute, abbreviated sibling. By softening its edges, we’ve made delusion 
                 almost aspirational. Call someone <span>Delulu</span> today, and they likely won’t take offense. Why would they?
                 <span>Delulu</span> is safe, <span>Delulu</span> is comforting, and most importantly <span>Delulu</span> is coping. It’s no longer something to avoid but something 
                 to embrace. After all they say <span>Delulu</span> is the Solulu. <br><br>
