--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      
         <div class="content">
             <p>
-                If someone told me that the richest man on Earth (and possibly Mars in the near future lol) stood on 
+                If someone told me that the richest man on Earth <span class="bracket">(and possibly Mars in the near future lol)</span> stood on 
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
                 Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, a testament to the times 
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
@@ -37,16 +37,16 @@
                 the president and this richest man is, of course, 
                 that it wasn’t a <em>Sieg Heil</em>. Obviously, it was a <em>Roman Salute</em> you Libtard. How could we be so naive? How foolish to see 
                 reality as it appears when we could reframe it to suit our preferences instead.
-                To set the stage (yes, I’m about to quote a dictionary, bear with me), the Cambridge Dictionary defines 
+                To set the stage <span class="bracket">(yes, I’m about to quote a dictionary, bear with me)</span>, the Cambridge Dictionary defines 
                 delusional as “believing things that are not true.” Delusions are a kind of mental gymnastics we perform 
                 to maintain beliefs that might not hold up to scrutiny. As a society, we’ve mastered the art of sustaining 
                 collective illusions. While classical delusions might isolate an individual, modern delusions, let’s call them 
                 their evolved form, bind us together, creating alternate realities we can inhabit, sometimes even multiple at 
                 once. This isn’t entirely new. <br><br>If I indulge my inner philosopher, imagine a cigarette and a 
                 faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth. 
-                The Cambridge Dictionary (yes, again) defines Post-Truth as “the state where arguments grounded 
+                The Cambridge Dictionary <span class="bracket">(yes, again)</span> defines Post-Truth as “the state where arguments grounded 
                 in emotions and beliefs are more persuasive than those based on facts”. But rather than delve 
-                into Simulacra and Simulation here (you’re welcome), I’ll just hyperlink it. We’re on the internet, 
+                into Simulacra and Simulation here  <span class="bracket">(you’re welcome)</span>, I’ll just hyperlink it. We’re on the internet, 
                 after all. you know where to click.<br><br>
                 What’s worth noting is the way delusion has entered our everyday language. 
                <span>Delulu</span>, Delusionals cute, abbreviated sibling. By softening its edges, we’ve made delusion 
