--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 delusional as “believing things that are not true.” Delusions are a kind of mental gymnastics we perform 
                 to maintain beliefs that might not hold up to scrutiny. As a society, we’ve mastered the art of sustaining 
                 collective illusions. While classical delusions might isolate an individual, modern delusions, let’s call them 
-                their evolved form, bind us together, creating alternate realities we can inhabit, sometimes even multiple at 
-                once. This isn’t entirely new. <br><br>If I indulge my inner philosopher, imagine a cigarette and a 
-                faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth. 
+                their evolved form, bind us together, creating alternate realities we can inhabit in unison, sometimes even multiple at 
+                once. This phenomenon isn’t entirely new. <br><br>If I indulge my inner philosopher, imagine a cigarette and a 
+                faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth/Post-Reality. 
                 The Cambridge Dictionary <span class="bracket">(yes, again)</span> defines Post-Truth as “the state where arguments grounded 
                 in emotions and beliefs are more persuasive than those based on facts”. But rather than delve 
                 into Simulacra and Simulation here  <span class="bracket">(you’re welcome)</span>, I’ll just hyperlink it. We’re on the internet, 
