--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
                 Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, a testament to the times 
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
-                The crowd keeps cheering. There are no shocked faces, no collective gasp, no scandalized silence. 
+                The crowd keeps cheering. There are no shocked faces, no collective gasp, no scandalized silence. <br>
                 Just applause.
                 <br><br>
                 And more shocking still? The aftermath. The consensus among those whose political beliefs align with 
@@ -38,18 +38,19 @@
                 that it wasn’t a <em>Sieg Heil</em>. Obviously, it was a <em>Roman Salute</em> you Libtard. How could we be so naive? How foolish to see 
                 reality as it appears when we could reframe it to suit our preferences instead.
                 To set the stage <span class="bracket">(yes, I’m about to quote a dictionary, bear with me)</span>, the Cambridge Dictionary defines 
-                delusional as “believing things that are not true.” Delusions are a kind of mental gymnastics we perform 
+                delusional as “believing things that are not true.”  <a class="foot" href="https://dictionary.cambridge.org/dictionary/english/delusional">1</a> 
+                Delusions are a kind of mental gymnastics we perform 
                 to maintain beliefs that might not hold up to scrutiny. As a society, we’ve mastered the art of sustaining 
                 collective illusions. While classical delusions might isolate an individual, modern delusions, let’s call them 
                 their evolved form, bind us together, creating alternate realities we can inhabit in unison, sometimes even multiple at 
                 once. This phenomenon isn’t entirely new. <br><br>If I indulge my inner philosopher, imagine a cigarette and a 
                 faint air of pretension, I’d name drop Baudrillard and the concept of Post-Truth/Post-Reality. 
                 The Cambridge Dictionary <span class="bracket">(yes, again)</span> defines Post-Truth as “the state where arguments grounded 
-                in emotions and beliefs are more persuasive than those based on facts”. But rather than delve 
+                in emotions and beliefs are more persuasive than those based on facts”<a class="foot" href="https://dictionary.cambridge.org/dictionary/english/post-truth">2</a>. But rather than delve 
                 into Simulacra and Simulation here  <span class="bracket">(you’re welcome)</span>, I’ll just hyperlink it. We’re on the internet, 
                 after all. you know where to click.<br><br>
                 What’s worth noting is the way delusion has entered our everyday language. 
-               <span>Delulu</span>, Delusionals cute, abbreviated sibling. By softening its edges, we’ve made delusion 
+               <span>Delulu</span>, Delusionals cute, abbreviated sibling gainde popularity in the last few years online. By softening its edges, we’ve made delusion 
                 almost aspirational. Call someone <span>Delulu</span> today, and they likely won’t take offense. Why would they?
                 <span>Delulu</span> is safe, <span>Delulu</span> is comforting, and most importantly <span>Delulu</span> is coping. It’s no longer something to avoid but something 
                 to embrace. After all they say "<span>Delulu</span> is the Solulu." <br><br>
@@ -63,7 +64,7 @@
       
             
         </div>
-        <a href="matter.html"> ENTER DELULU WONDERLAND</a>
+        <a class="next" href="matter.html"> ENTER DELULU WONDERLAND</a>
     </div>
 
     <script src="simpleheat.js"></script>
