--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>
                 If someone told me that the richest man on Earth <span class="bracket">(and possibly Mars in the near future lol)</span> stood on 
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
-                Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, a testament to the times 
+                Shocked, yes. But surprised? Not at all. And that, in itself, is deeply unsettling, but honestly also just a testament to the times 
                 we’re living in. What’s even harder to process isn’t the act, but the reaction. 
                 The crowd keeps cheering. There are no shocked faces, no collective gasp, no scandalized silence. <br>
                 Just applause.
