--- a/matter.html
+++ b/matter.html
@@ -7,22 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Rubik+Puddles&display=swap" rel="stylesheet">
-</head>
     <title>MATTER</title>
 </head>
 <body>
 <div class="top">
-    <h1>Welcome to Giga Delulu land</h1>
+    <h1>Welcome to Giga Delulu Land</h1>
 </div>
-    <div id="viewport">
- 
-    </div>
+<div id="viewport"></div>
 
-    <a href="luck.html"> lets go here</a>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-    <script src="scriptm.js"></script>
+
+<img src="img/dress.jpg" class="scene-image" >
+<img src="img/horse.jpg" class="scene-image" >
+<img src="img/schmetter.gif" class="scene-image" >
+
+<a href="luck.html">Let's go here</a>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+<script src="scriptm.js"></script>
 </body>
 </html>
