--- a/matter.html
+++ b/matter.html
@@ -17,9 +17,9 @@
 <div id="viewport"></div>
 
 
-<img src="img/dress.jpg" class="scene-image" >
-<img src="img/horse.jpg" class="scene-image" >
-<img src="img/schmetter.gif" class="scene-image" >
+<img src="img/dress.jpg" class="scene-image1" >
+<img src="img/horse.jpg" class="scene-image2" >
+<img src="img/schmetter.gif" class="scene-image3" >
 
 <a href="luck.html">Let's go here</a>
 
