--- a/matter.html
+++ b/matter.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Rubik+Puddles&display=swap" rel="stylesheet">
-    <title>MATTER</title>
+    <title>Delulu Land
+    </title>
 </head>
 <body>
+    <img src="img/background.png" class="back" >
 <div class="top">
     <h1>Welcome to Giga Delulu Land</h1>
 </div>
