--- a/matter.html
+++ b/matter.html
@@ -12,11 +12,13 @@
     </title>
 </head>
 <body>
-    <img src="img/background.png" class="back" >
+ 
 <div class="top">
     <h1>Welcome to Giga Delulu Land</h1>
 </div>
-<div id="viewport"></div>
+<div id="viewport">
+    <img src="img/background.png" class="back" >
+</div>
 
 
 <img src="img/dress.jpg" class="scene-image1" >
