--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
    
 <header> 
     <img id="rotate" class="headers" src="deluluemoji.png">
-    <p class="headers">delusional salvation</p>
-    <p class="headers"> a half assed essay </p>
+    <p class="headers">DELUSIONAL SALVATION</p>
+  
 
 </header>
     <div class="container">
