--- a/matter.html
+++ b/matter.html
@@ -12,20 +12,18 @@
     </title>
 </head>
 <body>
-    <img src="img/background.png" class="back" >
-<div class="top">
-    <h1>Welcome to Giga Delulu Land</h1>
-</div>
-
-
-
-<img src="img/dress.jpg" class="scene-image1" >
-<img src="img/horse.jpg" class="scene-image2" >
-<img src="img/schmetter.gif" class="scene-image3" >
-
-<a href="luck.html">Let's go here</a>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-<script src="scriptm.js"></script>
+    <img src="img/background.png" class="back" alt="Background Image">
+    <div id="scrollable-content">
+        <div class="top">
+            <h1>Welcome to Giga Delulu Land</h1>
+        </div>
+        <img src="img/dress.jpg" class="scene-image1" alt="Dress">
+        <img src="img/horse.jpg" class="scene-image2" alt="Horse">
+        <img src="img/schmetter.gif" class="scene-image3" alt="Schmetterling">
+        <a href="luck.html">Let's go here</a>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+    <script src="scriptm.js"></script>
 </body>
+
 </html>
