--- a/matter.html
+++ b/matter.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <img src="img/background.png" class="back" alt="Background Image">
-    <h1>Welcome to Giga Delulu Land</h1>
+    <h1>Giga Delulu Land</h1>
     <div id="scrollable-content">
         <div class="top">
 
@@ -21,7 +21,7 @@
         <img src="img/dress.jpg" class="scene-image1" alt="Dress">
         <img src="img/horse.jpg" class="scene-image2" alt="Horse">
         <img src="img/schmetter.gif" class="scene-image3" alt="Schmetterling">
-        <a href="luck.html">Let's go here</a>
+       
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <script src="scriptm.js"></script>
