--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <header> 
     <img id="rotate" class="headers" src="deluluemoji.png">
     <p class="headers">DELUSIONAL SALVATION</p>
-  
-
 </header>
+
+
     <div class="container">
+
+<p class="intro">DELUSION</p>
         <canvas id="canvas"></canvas>
 
      
