--- a/matter.html
+++ b/matter.html
@@ -22,6 +22,8 @@
         <img src="img/dress.jpg" class="scene-image1" alt="Dress">
         <img src="img/horse.jpg" class="scene-image2" alt="Horse">
         <img src="img/schmetter.gif" class="scene-image3" alt="Schmetterling">
+        <img src="dog.jpg" class="scene-image4" alt="Dog">
+        <img src="deluluemoji.png" class="scene-image5" alt="emoji">
        
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
