--- a/matter.html
+++ b/matter.html
@@ -14,7 +14,7 @@
 <body>
     <img src="img/background.png" class="back" alt="Background Image">
     <h1>Giga Delulu Land</h1>
-    <h2>Delusional Salvation</h2>
+    <a href="index.html">Delusional Salvation</a>
     <div id="scrollable-content">
         <div class="top">
 
