--- a/matter.html
+++ b/matter.html
@@ -24,9 +24,13 @@
         <img src="img/schmetter.gif" class="scene-image3" alt="Schmetterling">
         <img src="dog.jpg" class="scene-image4" alt="Dog">
         <img src="deluluemoji.png" class="scene-image5" alt="emoji">
-        <img src="img/cat2.png" class="scene-image5" alt="emoji">
-        <video controls autoplay muted>
+        <img src="img/cat2.png" class="scene-image6" alt="emoji">
+        <video class="scene-image7" controls autoplay muted>
             <source src="img/delulu.mp4" type="video/mp4">
+        </video>
+        <img src="img/quote.png" class="scene-image8" alt="emoji">
+        <img src="img/sonntag.png" class="scene-image9" alt="emoji">
+        <img src="img/train.png" class="scene-image10" alt="emoji">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <script src="scriptm.js"></script>
