--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <a class="next" href="matter.html"> ENTER DELULU WONDERLAND</a>
     </div>
-
+<div class="boden"></div>
     <script src="simpleheat.js"></script>
     <script src="data.js"></script>
     <script src="script.js"></script>
