--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         <a class="next" href="matter.html"> ENTER DELULU WONDERLAND</a>
     </div>
 <div class="boden"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+
     <script src="simpleheat.js"></script>
     <script src="data.js"></script>
     <script src="script.js"></script>
