--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="headers">DELUSIONAL SALVATION</p>
 </header>
 
-
+<div class="scrollable-content">
     <div class="container">
 
 <p class="intro">DELUSION</p>
@@ -68,6 +68,7 @@
         </div>
         <a class="next" href="matter.html"> ENTER DELULU WONDERLAND</a>
     </div>
+</div>
 <div class="boden"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
