--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="headers">DELUSIONAL SALVATION</p>
 </header>
 
-<div class="scrollable-content">
+<div id="scrollable-content">
     <div class="container">
 
 <p class="intro">DELUSION</p>
