--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <canvas id="canvas"></canvas>
 
      
-        <div class="content">
+        <div id="content" class="content">
             <p>
                 If someone told me that the richest man on Earth <span class="bracket">(and possibly Mars in the near future lol)</span> stood on 
                 a stage celebrating a new president with a strong and deliberate Sieg Heil, I wouldn’t be entirely surprised. 
