--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
 <header> 
     <img id="rotate" class="headers" src="deluluemoji.png">
-    <p class="headers">DELUSIONAL SALVATION</p>
+    <a  href="matter.html" class="headers">DELUSIONAL SALVATION</a>
 </header>
 
 
@@ -66,7 +66,7 @@
       
             
         </div>
-        <a class="next" href="matter.html"> ENTER DELULU WONDERLAND</a>
+  
     </div>
 
 <div class="boden"></div>
